adding flask undo and seed command to yml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,3 +51,5 @@ jobs:
       env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask db upgrade
+      run: heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask undo all
+      run: heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask seed all
