fixing syntax error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
     - name: Run DB Migration
       env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask db upgrade
-      run: heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask undo all
-      run: heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask seed all
+      run:
+        heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask db upgrade
+        heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask undo all
+        heroku run -a ${{ secrets.HEROKU_APP_NAME }} flask seed all
