--- a/Pipfile
+++ b/Pipfile
@@ -25,7 +25,8 @@ python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
 greenlet = "==1.1.0"
 Mako = "==1.1.4"
-faker = "*"
+Faker = "==13.3.4"
+email-validator = "*"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
