--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
