--- a/Pipfile
+++ b/Pipfile
@@ -25,9 +25,11 @@ python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
 greenlet = "==1.1.0"
 Mako = "==1.1.4"
-faker = "*"
-email-validator = "*"
+email-validator = "==1.1.3"
 validators = "*"
+Faker = "==13.3.4"
+dnspython = "==2.2.1"
+idna = "==3.3"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
