--- a/react-app/package.json
+++ b/react-app/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "http-proxy-middleware": "^1.0.5",
+    "in": "^0.19.0",
     "react": "^17.0.2",
+    "react-app": "^1.1.2",
     "react-calendar": "^3.7.0",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
