minor fixes, added screenshots

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# No need for DATABASE_URL to be set if developing from within a devcontainer
-
-FLASK_APP=app
-FLASK_ENV=development
-SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
-DATABASE_URL=postgresql://starter_app_dev@localhost/starter_app
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_HOST=
+SECRET_KEY=
+DATABASE_URL=
+REACT_APP_GMAPS_KEY=
